--- a/src/main/resources/templates/admin/booking.html
+++ b/src/main/resources/templates/admin/booking.html
@@ -9,7 +9,8 @@
     <meta name="description" content=""/>
     <meta name="author" content=""/>
     <title>Tables - SB Admin</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link th:href="@{../css/styles.css}" rel="stylesheet"/>
 
