--- a/src/main/resources/templates/admin/dashboardLayout.html
+++ b/src/main/resources/templates/admin/dashboardLayout.html
@@ -8,8 +8,9 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Dashboard - SB Admin</title>
-
-    <link th:href="@{/css/styles.css}" rel="stylesheet" type="text/css" media="all" href="../../css/styles.css"   />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link th:href="@{/css/styles.css}" rel="stylesheet" type="text/css" media="all"   />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
 <body class="sb-nav-fixed">
@@ -25,8 +26,9 @@
 
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script th:src="@{/js/scripts.js}"></script>
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+<!--    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>-->
 </body>
 </html>
