--- a/src/main/resources/templates/admin/topnav.html
+++ b/src/main/resources/templates/admin/topnav.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link th:href="@{../css/styles.css}" rel="stylesheet" />
+<!--    <link th:href="@{../css/styles.css}" rel="stylesheet" />-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark" th:fragment="topnav">
