--- a/src/main/resources/templates/admin/trip.html
+++ b/src/main/resources/templates/admin/trip.html
@@ -11,8 +11,9 @@
     <title>Tables - SB Admin</title>
 
 
-    <link th:href="@{../css/styles.css}" rel="stylesheet" />
-
+<!--    <link th:href="@{../css/styles.css}" rel="stylesheet" />-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body class="sb-nav-fixed">
 <div layout:fragment="content" class="container">
@@ -25,7 +26,7 @@
             <div class="col-md-3">
                 <label  class="form-label fw-semibold">Tuyến xe</label>
                 <select class="form-select" name="route" style="filter: invert(1);">
-                    <option value="0"> - tất cả - </option>
+                    <option value="0" > - tất cả - </option>
                     <option th:each="route : ${routes}"
                             th:value="${route.id}"
                             th:text="${route.getName()}"
@@ -110,7 +111,7 @@
                 </table>
             </div>
 
-            <nav aria-label="Page navigation" th:if="${date == null || routeInput == null}">
+            <nav aria-label="Page navigation" th:if="${date == null} and ${routeInput == null}">
                 <ul class="pagination">
                     <li class="page-item" th:classappend="${currentPage == 1 ? 'disabled' : ''}">
                         <a class="page-link" th:href="@{/admin/trip(page=1)}">First</a>
