--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -441,7 +441,318 @@ body
  + 3 MENU LEVEL
 -------------------------------------------------------------------*/
 
+footer a{
+  text-decoration: none;
+}
+.bus {
+  max-width: 500px;
+  border: 5px solid #d8d8d8;
+  padding-bottom: 10px;
+}
 
+.bus label {
+  display: block;
+  position: relative;
+  border: 1px solid;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.5rem;
+  padding: 5px 0;
+  border-radius: 5px;
+  animation-duration: 300ms;
+  animation-fill-mode: both;
+}
+
+.exit {
+  position: relative;
+  height: 50px;
+}
+
+.exit:before,
+.exit:after {
+  content: "EXIT";
+  font-size: 14px;
+  line-height: 18px;
+  padding: 0px 2px;
+  font-family: "Arial Narrow", Arial, sans-serif;
+  display: block;
+  position: absolute;
+  background: green;
+  color: white;
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.exit:before {
+  left: 0;
+}
+
+.exit:after {
+  right: 0;
+}
+
+.floorbody {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.column {
+  display: flex;
+  flex: 0 0 30%;
+}
+
+.row-1 {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  padding-bottom: 10px;
+}
+
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.seats {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.seat {
+  display: flex;
+  flex: 0 0 10%;
+  padding: 10px;
+  position: relative;
+}
+
+.seat input[type=checkbox] {
+  position: absolute;
+  opacity: 0;
+}
+
+.seat input[type=checkbox]:checked+label {
+  background: #bada55;
+  -webkit-animation-name: rubberBand;
+  animation-name: rubberBand;
+  animation-duration: 300ms;
+  animation-fill-mode: both;
+}
+
+.seat input[type=checkbox]:disabled+label {
+  background: #CBC3C3;
+  /*text-indent: -9999px;*/
+  overflow: hidden;
+}
+
+/*.seat input[type=checkbox]:disabled+label:after {*/
+/*    !*content: "X";*!*/
+/*    text-indent: 0;*/
+/*    position: absolute;*/
+/*    top: 4px;*/
+/*    left: 50%;*/
+/*    transform: translate(-50%, 0%);*/
+/*}*/
+
+.seat input[type=checkbox]:disabled+label:hover {
+  box-shadow: none;
+  cursor: not-allowed;
+}
+
+.seat label {
+  background: #ffffff;
+}
+
+.seat label:before {
+  content: "";
+  position: absolute;
+  width: 75%;
+  height: 75%;
+  top: 1px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 3px;
+}
+
+.seat label:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 2px 2px #5C6AFF;
+}
+
+.lastseat {
+  display: flex;
+  flex: 0 0 18%;
+  padding: 0;
+}
+
+.headseat {
+  display: flex;
+  flex: 0 0 33%;
+  padding: 3px 3px 10px 3px;
+}
+
+
+.headseat label {
+  background: #d3d2d2;
+}
+
+
+
+.formcheck .option {
+  display: flex;
+  flex: 0 0 50%;
+  padding: 10px 3px;
+  position: relative;
+  border-bottom: 5px solid #d8d8d8;
+}
+
+.formcheck .option:first-child {
+  border-right: 5px solid #d8d8d8;
+  border-bottom: white;
+}
+
+.formcheck input[type=radio] {
+  position: absolute;
+  opacity: 0;
+}
+
+.formcheck input[type=radio]:checked+label {
+  background-color: #cbc3c3;
+  color: black;
+}
+
+.formcheck input[type=radio]:disabled+label {
+  background: #dddddd;
+  text-indent: -9999px;
+  overflow: hidden;
+}
+
+.formcheck input[type=radio]:disabled+label:after {
+  content: "X";
+  text-indent: 0;
+  position: absolute;
+  top: 4px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.formcheck input[type=radio]:disabled+label:hover {
+  box-shadow: none;
+  cursor: not-allowed;
+}
+
+.formcheck label {
+  background: #ffffff;
+  font-size: 18px;
+}
+
+.seat input[type=checkbox].BOOKED+label {
+  background-color: #bdbd00;
+  pointer-events: none;
+}
+
+.seat input[type=checkbox].RESERVED+label {
+  background-color: #7e7efd;
+  pointer-events: none;
+}
+
+.seat input[type=checkbox].NOT_FOR_SALE+label {
+  background-color: #5c5e60;
+  pointer-events: none;
+}
+
+.seat input[type=checkbox].SOLD+label {
+  background-color: #A42323;
+  pointer-events: none;
+}
+
+
+
+
+@-webkit-keyframes rubberBand {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
+  }
+
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
+  }
+
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
+  }
+
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes rubberBand {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
+  }
+
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
+  }
+
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
+  }
+
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.rubberBand {
+  -webkit-animation-name: rubberBand;
+  animation-name: rubberBand;
+}
 /*END_SEAT-BOOKING*/
 
 
