--- a/src/main/resources/templates/public/result-payment.html
+++ b/src/main/resources/templates/public/result-payment.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link href="../css/styles.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link th:href="@{/css/styles.css}" rel="stylesheet" type="text/css" media="all" href="../../css/styles.css"   />
     <link href="../icons/font/bootstrap-icons.min.css" rel="stylesheet" />
 </head>
 <body>
