--- a/src/main/resources/templates/public/result-payment.html
+++ b/src/main/resources/templates/public/result-payment.html
@@ -36,41 +36,47 @@
 </nav>
 
 <div class="container">
-    <h3 class="mt-5 text-center">MUA VÉ THÀNH CÔNG </h3>
-    <div class="card mb-3 mx-auto " style="max-width: 700px;">
-        <div class="card-header text-center">
-            Vui lòng bảo mật mã QR-Code để tránh các trường hợp đáng tiếc xảy ra.
-        </div>
-
-        <div class="row g-0 " >
-            <div class="col-md-5 align-self-center">
-                <img  th:src="${qrcode}" class="img-fluid rounded-start" alt="...">
+    <div  th:if="${#strings.isEmpty(error)}">
+        <h3 class="mt-5 text-center">MUA VÉ THÀNH CÔNG </h3>
+        <div class="card mb-3 mx-auto " style="max-width: 700px;">
+            <div class="card-header text-center">
+                Vui lòng bảo mật mã QR-Code để tránh các trường hợp đáng tiếc xảy ra.
             </div>
-            <div class="col-md-7">
-                <div class=" text-white" style=" background-color:#0D572B;">
-                    <div class="card-header ">
-                        <h5 class="text-center">THÔNG TIN CHUYẾN XE</h5>
+
+            <div class="row g-0 " >
+                <div class="col">
+                    <div class=" text-white" style=" background-color:#0D572B;">
+                        <div class="card-header ">
+                            <h5 class="text-center">THÔNG TIN CHUYẾN XE</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Số điện thoại : <strong th:text="${phoneNumber}"> </strong></p>
+                            <p class="card-text">Chuyến xe : <strong th:text="${tripNamel}"> </strong></p>
+                            <p class="card-text">Thời gian : <strong th:text="${departureDate}"></strong> </p>
+                            <p class="card-text">Thời gian đón (dự kiến) : <strong th:text="${departureTime}"> </strong></p>
+                            <p class="card-text">Điểm đón : <strong th:text="${departureLocation}">  </strong></p>
+                            <p class="card-text">Điểm trả : <strong th:text="${arrivalLocation}"> </strong></p>
+                            <p class="card-text">Số ghế : <strong th:text="${listSeat}"></strong></p>
+                            <p class="card-text">Số tiền thanh toán : <strong th:text="${amount}"> </strong></p>
+                        </div>
+                        <div class="card-footer"></div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text">Số điện thoại : <strong th:text="${phoneNumber}"> </strong></p>
-                        <p class="card-text">Chuyến xe : <strong th:text="${tripNamel}"> </strong></p>
-                        <p class="card-text">Thời gian : <strong th:text="${departureDate}"></strong> , <strong th:text="${starTime}"></strong></p>
-                        <p class="card-text">Thời gian đón (dự kiến) : <strong th:text="${departureTime}"> </strong></p>
-                        <p class="card-text">Điểm đón : <strong th:text="${departureLocation}">  </strong></p>
-                        <p class="card-text">Điểm trả : <strong th:text="${arrivalLocation}"> </strong></p>
-                        <p class="card-text">Số ghế : <strong th:text="${listSeat}"></strong></p>
-                    </div>
-                    <div class="card-footer"></div>
                 </div>
             </div>
-        </div>
 
-        <div class="card-footer">
-            <h5 class="card-title fs-3">Quý khách lưu ý:</h5>
-            <li>Vui lòng có mặt trước 30 phút để làm thủ tục lên xe.</li>
-            <li>Đối với các chuyến xe buổi tối xuất phát ở Đà Nẵng từ 22/12 đến 29/12 (âm lịch), Quý khách vui lòng có mặt tại bến lúc 19h00 để làm thủ tục lên xe.</li>
+            <div class="card-footer">
+                <h5 class="card-title fs-3">Quý khách lưu ý:</h5>
+                <li>Vui lòng có mặt trước 30 phút để làm thủ tục lên xe.</li>
+                <li>Đối với các chuyến xe buổi tối xuất phát ở Đà Nẵng từ 22/12 đến 29/12 (âm lịch), Quý khách vui lòng có mặt tại bến lúc 19h00 để làm thủ tục lên xe.</li>
+            </div>
         </div>
     </div>
+
+
+    <div th:if="${error}">
+        <h3 class="mt-5 text-center" th:text="${error}"></h3>
+    </div>
+
 </div>
 <div th:replace="public/footer:: footer"></div>
 </body>
