--- a/src/main/resources/templates/public/seat-booking.html
+++ b/src/main/resources/templates/public/seat-booking.html
@@ -7,9 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seleção de lugares</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link th:href="@{/css/styles.css}" rel="stylesheet" type="text/css" media="all"   />
+    <link href="../css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -253,10 +251,13 @@
                     <label class="form-check-label" for="vnpay"> Thanh toán VNPAY </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" id="zalopay" name="pay" value="payos">
-                    <label class="form-check-label" for="zalopay"> Quét QR Thanh toán </label>
+                    <input class="form-check-input" type="radio" id="zalopay" name="pay" value="zalopay">
+                    <label class="form-check-label" for="zalopay"> Thanh toán ZALOPAY </label>
                 </div>
-
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="momo" name="pay" value="momo">
+                    <label class="form-check-label" for="momo"> Thanh toán MOMO </label>
+                </div>
 
                 <input type="hidden" name="tripid" th:value="${tripCard.getTripId()}">
                 <input type="hidden" name="departureid" th:value="${departureLocation}">
