--- a/src/main/resources/templates/admin/nav.html
+++ b/src/main/resources/templates/admin/nav.html
@@ -19,9 +19,9 @@
                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     Trang chủ
                 </a>
-                <a class="nav-link" href="../public/index2.html">
+                <a class="nav-link" href="driver/bus">
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-ticket"></i></div>
-                    Đặt vé xe
+                    Check in
                 </a>
                 <a class="nav-link" href="/admin/trip">
                     <div class="sb-nav-link-icon"><i class="fa-solid fa-car-side"></i></div>
