--- a/src/main/resources/templates/public/home.html
+++ b/src/main/resources/templates/public/home.html
@@ -90,7 +90,7 @@
                     >
                   <a
                      class="btn btn-success btn-outline-light btn-lg m-2" data-mdb-ripple-init
-                     th:href="@{/user}"
+                     th:href="@{/login}"
                      role="button"
                      >QUẢN LÝ VÉ</a>
                   <!-- MANAGER YOUR TICKETS-->
